--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <version>2.9.6</version>
         </dependency>
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.0</version>
+        </dependency>
+        <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
             <version>1.3.1</version>
@@ -44,9 +49,6 @@
             <artifactId>feign-jaxrs</artifactId>
             <version>9.7.0</version>
         </dependency>
-
-
-
         <dependency>
             <groupId>org.spockframework</groupId>
             <artifactId>spock-core</artifactId>
