change config to support map<interface, reader> instead of List<reader>

--- a/src/test/resources/config.yaml
+++ b/src/test/resources/config.yaml
@@ -1,8 +1,8 @@
 capabilities:
-  - interface: rest
+  rest:
     readerClass: SwaggerCapabilitiesReader
     config:
       swaggerLocation: ./target/classes/static/swagger/
 expectations:
-  - interface: rest
+  rest:
     readerClass: PactExpectationsReader
