--- a/src/main/resources/com/hltech/contracts/judged/publisher/config/default-config.yaml
+++ b/src/main/resources/com/hltech/contracts/judged/publisher/config/default-config.yaml
@@ -1,10 +1,10 @@
 capabilities:
-  - interface: rest
+  rest:
     readerClass: com.hltech.contracts.judged.publisher.capabilities.SwaggerCapabilitiesReader
     config:
       swaggerLocation: ./target/classes/static/swagger/
 expectations:
-  - interface: rest
+  rest:
     readerClass: com.hltech.contracts.judged.publisher.expectations.PactExpectationsReader
     config:
       pactsLocation: ./target/pacts
