--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.hltech.contracts.judged</groupId>
     <artifactId>judge-d-contract-publisher</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.3.0</version>
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
@@ -74,14 +74,6 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>3.0.2</version>
-                    <configuration>
-                        <archive>
-                            <manifest>
-                                <addClasspath>true</addClasspath>
-                                <mainClass>com.hltech.contracts.judged.publisher.ContractPublisher</mainClass>
-                            </manifest>
-                        </archive>
-                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
