--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,10 @@ jobs:
     - stage: build with maven & generate reports
       script:
       - mvn clean verify
-#    - stage: build & publish docker image for server
+    - stage: build & publish docker image for server
 #      if: branch = master
-#      script:
-#      - mvn docker:build@build-docker -P docker-app -f ./pom.xml
+      script:
+      - mvn docker:build@build-docker -P docker-app -f ./pom.xml
 #      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 #      - docker push hltech/judge-d-contract-publisher
+      - docker run hltech/judge-d-contract-publisher 1 2 3 4 5
