--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
             <artifactId>json-path-assert</artifactId>
             <version>2.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.hltech</groupId>
+            <artifactId>vaunt-core</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
