--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.hltech.contracts.judged</groupId>
     <artifactId>judge-d-contract-publisher</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.4.0</version>
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
